task1/outputs/03-services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"ledger-api","namespace":"payments"},"spec":{"ports":[{"name":"http","port":8080,"targetPort":8080}],"selector":{"app":"ledger-api"}}}
    creationTimestamp: "2026-07-29T20:26:53Z"
    name: ledger-api
    namespace: payments
    resourceVersion: "24916"
    uid: b4c4801a-4c80-4653-b7f5-bf25a0f4e318
  spec:
    clusterIP: 10.96.19.138
    clusterIPs:
    - 10.96.19.138
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ledger-api
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"reporting","namespace":"payments"},"spec":{"ports":[{"port":80,"targetPort":8080}],"selector":{"app":"reporting"}}}
    creationTimestamp: "2026-07-29T20:23:56Z"
    name: reporting
    namespace: payments
    resourceVersion: "24271"
    uid: b4634b91-1169-4d21-a3f5-0b31cf19f8b8
  spec:
    clusterIP: 10.96.225.79
    clusterIPs:
    - 10.96.225.79
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: reporting
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
