task1/outputs/07-security-context.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"ledger-api"},"name":"ledger-api","namespace":"payments"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"ledger-api"}},"template":{"metadata":{"labels":{"app":"ledger-api"}},"spec":{"containers":[{"env":[{"name":"STRIPE_API_KEY","valueFrom":{"secretKeyRef":{"key":"STRIPE_API_KEY","name":"ledger-api-secret"}}},{"name":"DB_PASSWORD","valueFrom":{"secretKeyRef":{"key":"DB_PASSWORD","name":"ledger- [...]
  creationTimestamp: "2026-07-29T19:48:46Z"
  generation: 7
  labels:
    app: ledger-api
  name: ledger-api
  namespace: payments
  resourceVersion: "107290"
  uid: ad23ea9b-e574-4453-9035-5e5367654512
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ledger-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-30T22:52:16+05:30"
      labels:
        app: ledger-api
    spec:
      containers:
      - env:
        - name: STRIPE_API_KEY
          valueFrom:
            secretKeyRef:
              key: STRIPE_API_KEY
              name: ledger-api-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: ledger-api-secret
        envFrom:
        - configMapRef:
            name: ledger-api-config
        image: ledger-api:v2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        name: ledger-api
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: ledger-api-sa
      serviceAccountName: ledger-api-sa
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-07-29T19:56:29Z"
    lastUpdateTime: "2026-07-29T19:56:29Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-07-30T17:22:16Z"
    lastUpdateTime: "2026-07-30T17:23:44Z"
    message: ReplicaSet "ledger-api-8557bb7cf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 2
  replicas: 2
  terminatingReplicas: 0
  updatedReplicas: 2
